# ZenCAD-ZenDO

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
docs/: auditoria_vs_autocad.md
entregas/: Casa Briefing UI.zendo  Casa do Dogfooding.zendo
entregas/Casa Briefing/: Casa Briefing.zendo  Planta baixa - superior.zencad  Planta baixa - terreo.zencad
entregas/Casa Enso/: Casa Enso (sem telhado).zendo  Casa Enso.gltf  Casa Enso.zendo
entregas/Casa Zen/: 1 - Axonometrica.png.txt  3 - Planta do superior.png.txt  Casa Zen.zendo
entregas/Sobrado Zen/: Sobrado Zen (planta superior).zendo  Sobrado Zen (planta terreo).zendo  Sobrado Zen.zendo
installer/: common.isi  zencad.iss  zendo.iss
projetos/: Casa Enso 3D.zencad  Casa Enso.gltf  Casa Enso.zencad  Casa Patio.zencad  Corte Y54 (Zendo).zencad  Elevacao Sul (Zendo).zencad  Estudo Cena.zendo  Estudo Enso.zendo  Terreno Enso.zencad
scripts/: build_release.bat  prova_mojibake.py  qa_mojibake.py  render_casa.py
scripts/entregas/: README-provas.md  README.md  build_casa.py  build_casa_briefing.py  build_casa_zen.py  build_sobrado.py  casa-semente.zendo  escada-semente.zendo  gera_casa.py  prova_aberturas.py  prova_chuva.py  prova_cobertura.py  prova_mutacao.py  prova_programa.py
src/app/: CMakeLists.txt  Camera.hpp  CommandTable.hpp  CursorHud.hpp  GridRenderer.hpp  LayersPanel.cpp  LayersPanel.hpp  MainWindow.cpp  MainWindow.hpp  PlotStyle.hpp  ProjectIo.cpp  ProjectIo.hpp  StartPage.cpp  StartPage.hpp  StatusBar.cpp  StatusBar.hpp  Theme.hpp  ToolIcons.hpp  TtfTextProvider.hpp  ViewportWidget.cpp  ViewportWidget.hpp  main.cpp  zencad.rc
src/core/: CMakeLists.txt  Types.hpp
src/core/cli/: CommandParser.cpp  CommandParser.hpp
src/core/command/: Command.hpp  CommandStack.cpp  CommandStack.hpp
src/core/command/commands/: AddEntityCmd.hpp  ArrayCmd.hpp  BreakCmd.hpp  ChamferCmd.hpp  CopyCmd.hpp  DeleteEntityCmd.hpp  EraseCmd.hpp  ExplodeCmd.hpp  ExtendCmd.hpp  FilletCmd.hpp  GripEditCmd.hpp  JoinCmd.hpp  MacroCmd.hpp  MakeBlockCmd.hpp  MirrorCmd.hpp  MoveCmd.hpp  OffsetCmd.hpp  ReplaceCmd.hpp  StretchCmd.hpp  TransformCmd.hpp  TransformCopyCmd.hpp  TrimCmd.hpp
src/core/document/: BlockTable.hpp  DrawingManager.cpp  DrawingManager.hpp  Layer.hpp  LayerTable.cpp  LayerTable.hpp  PlotStyle.hpp  Style.hpp
src/core/edit/: ArrayPathOps.hpp  BooleanOps.hpp  BoundaryTrace.hpp  ChamferOps.cpp  ChamferOps.hpp  CleanupOps.hpp  ConstructOps.cpp  ConstructOps.hpp  DivideOps.cpp  DivideOps.hpp  ExtendOps.cpp  ExtendOps.hpp  FilletOps.cpp  FilletOps.hpp  GeometryOps.cpp  GeometryOps.hpp  GripOps.cpp  GripOps.hpp  InquiryOps.cpp  InquiryOps.hpp  IntersectOps.cpp  IntersectOps.hpp  LoopExtract.hpp  ModifyOps.cpp  ModifyOps.hpp  ReviseCloud.cpp  ReviseCloud.hpp  SegmentOps.hpp  SplineOps.cpp  SplineOps.hpp  Tangent3Ops.cpp  Tangent3Ops.hpp  TangentOps.cpp  TangentOps.hpp  TrimOps.cpp  TrimOps.hpp
src/core/geometry/: Arc.cpp  Arc.hpp  AttDef.hpp  BlockRef.cpp  BlockRef.hpp  Bulge.hpp  Circle.cpp  Circle.hpp  Dimension.cpp  Dimension.hpp  Ellipse.cpp  Ellipse.hpp  Entity.cpp  Entity.hpp  Hatch.cpp  Hatch.hpp  Leader.cpp  Leader.hpp  Line.cpp  Line.hpp  LinePattern.cpp  LinePattern.hpp  MLeader.cpp  MLeader.hpp  MLine.cpp  MLine.hpp  MText.cpp  MText.hpp  PointEntity.cpp  PointEntity.hpp  Polyline.cpp  Polyline.hpp  Properties.hpp  RayLine.cpp  RayLine.hpp  Region.cpp  Region.hpp  RenderBatch.hpp  SnapPoint.hpp  Spline.cpp  (+10 more)
src/core/interaction/: ToolController.cpp  ToolController.hpp
src/core/layout/: Layout.hpp
src/core/math/: AABB.hpp  Constants.hpp  Matrix4.hpp  Ray.hpp  Segment.hpp  Vec.hpp
src/core/mesh/: HalfEdgeMesh.cpp  HalfEdgeMesh.hpp
src/core/snap/: Polar.hpp  SnapEngine.cpp  SnapEngine.hpp
src/core/spatial/: ISpatialIndex.hpp  Quadtree.cpp  Quadtree.hpp
src/core/text/: StrokeFont.cpp  StrokeFont.hpp  TtfFont.hpp
src/io/: DxfReader.cpp  DxfReader.hpp  DxfWriter.cpp  DxfWriter.hpp
src/tools/: CMakeLists.txt  smoke_main.cpp
src/ui/: Theme.hpp
src/zendo/: BlenderInstaller.cpp  BlenderInstaller.hpp  Bridge.cpp  Bridge.hpp  CMakeLists.txt  FurnitureLib.cpp  FurnitureLib.hpp  MaterialLib.cpp  MaterialLib.hpp  ObjImport.cpp  ObjImport.hpp  PlantImport.cpp  PlantImport.hpp  StartPage3D.cpp  StartPage3D.hpp  Viewport3D.cpp  Viewport3D.hpp  ZendoChrome.hpp  ZendoWindow.cpp  ZendoWindow.hpp  main.cpp  render_cena.py  zendo.rc
src/zendo/materiais_foto/: LEIA-ME.txt  PROCEDENCIA.txt
src/zenio/: CMakeLists.txt  ProjectIo.cpp  ProjectIo.hpp  zenio_smoke.cpp
